--- a/form.html
+++ b/form.html
@@ -19,9 +19,18 @@ Description : A simple HTML file for form tag.
         <fieldset>
             <legend>Personal Information</legend>
             <!-- Add a label and input field for 'Name' here -->
+            <label for="name">Name:</label>
+            <input type="name" id="name" name="name"  placeholder="Enter your name:">
+            <br>
+
             <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email"><br>
+            <input type="email" id="email" name="email" placeholder="Enter your email:">
+            <br>
+
             <!-- Add a label and input field for 'Password' here, ensure to use the correct type for password fields -->
+            <label for="password">Password:</label>
+            <input type="password" id="password" password="password" placeholder="Enter your password:">
+            <br>
         </fieldset>
 
         <fieldset>
@@ -30,11 +39,27 @@ Description : A simple HTML file for form tag.
 			<input type="radio" id="male" name="gender" value="male">
             <label for="male">Male</label><br>
             <!-- Create radio buttons for 'Female', and 'Other' gender options -->
+            <input type="radio" id="female" name="gender" value="female">
+            <label for ="female">Female</label>
+            <br>
+            
+            <input type="radio" id="other" name="gender" value="other">
+            <label for="other">Other</label>
+            <br>
 	
             <label for="fruits">Choose a fruit:</label><br>
-            <select id="fruits" name="fruits">
+            <select id="fruits" name="fruits" size="10">
 				<option value="apple">Apple</option>
                 <!-- Add options for various fruits like Banana, Orange, etc. (At least 10 fruits) -->
+                <option value="orange">Orange</option>
+                <option value="banana">Banana</option>
+                <option value="watermelon">Watermelon</option>
+                <option value="pear">Pear</option>
+                <option value="strawberry">Strawberry</option>
+                <option value="grape">Grape</option>
+                <option value="blueberry">Blueberry</option>
+                <option value="mango">Mango</option>
+                <option value="mandarin">Mandarin</option>
             </select><br>
 			<!-- Add some attributes to select tag that changes it from a drop menu to a scrollable list.-->
         </fieldset>
@@ -42,19 +67,36 @@ Description : A simple HTML file for form tag.
         <fieldset>
             <legend>Other Elements</legend>
             <!-- Add a label and input field for 'Birthday' here, use the appropriate type for date selection -->
+            <label for="birthday">Birthday:</label>
+            <input type="date" id="birthdate" name="birthdate">
+            <br>
             <label for="favcolor">Favorite Color:</label><br>
             <input type="color" id="favcolor" name="favcolor"><br>
             <!-- Add a label and number input field for 'Quantity', set min to 1 and max to 5 -->
+            <label for="quantity">Quantity (between 1 and 5)</label>
+            <input type="number" id="quantity" name="quantity" min="1" max="5">
+            <br>
             <label for="range">Range (between 1 and 10):</label><br>
-            <input type="range" id="range" name="range" min="1" max="10"><br>
+            <input type="range" id="range" name="range" min="1" max="10" value="2"><br>
 			<!-- Add an attribute to the range input to set its initial value to 2-->
             <!-- Add a label and input field for 'Homepage', use the correct type for URLs -->
+            <label for="homepage">Add your homepage</label>
+            <input type="url" id="homepage" name="homepage">
+            <br>
             <label for="feedback">Feedback:</label><br>
-			<textarea id="feedback" name="feedback"></textarea><br>
+			<textarea id="feedback" name="feedback" cols="30" rows="10"></textarea><br>
             <!-- Add some attributes to the feedback textarea tag to make it bigger and suitable for editing texts-->
             <!-- Add a file input field -->
+            <label for="fileInput">File Input</label>
+            <input type="file" id="fileInput" name="fileInput">
+            <br>
             <!-- Add a checkbox for 'Subscribe to newsletter' -->
+            <label>Subsribe to Newsletter:</label>
+            <input type="checkbox" id="subscribe" name="subscribe">
+            <label for="subscribe">Yes, subscribe me to the newsletter</label>
+            <br>
             <!-- Add a hidden field for 'customerId', set its value to '12345' -->
+            <input type="hidden" id="customerId" name="customerId" value="12345">
             <input type="submit" value="Submit">
             <input type="reset" value="Reset">
         </fieldset>
