--- a/styling.html
+++ b/styling.html
@@ -14,24 +14,33 @@ Description : Learning CSS.
     <style>
         #margin-demo {
             /*Modify #margin-demo to have a margin of 30px and a solid black border of 2px. Also, the borders must fit the content.*/
+            margin: 30px;
+            border: black 2px solid;
+            width: fit-content
+
         }
 
         .padding-demo {
             /*Adjust .padding-demo to include 30px padding and a dashed red border of 2px.*/
+            padding: 30px;
+            border: red 2px dashed;
         }
 
         .container .nested-opacity {
             /*Change the opacity of .nested-opacity to 0.2!*/
+            opacity: 0.2;
         }
 
         
         .inline-demo {
             /*Change the display to see all elements of this type in a line.*/
             margin: 15px;
+            display: inline-block;
         }
 
         .block-demo {
             /*Ensure .block-demo centers its text.*/
+            text-align: center;
         }
 
         /*
@@ -45,6 +54,7 @@ Description : Learning CSS.
             Add CSS that I stick the first child to the left side of the screen.
             */
             color: red;
+            float: left;
             
         }
 
@@ -53,14 +63,20 @@ Description : Learning CSS.
         }
 
         /* Add your css for the thrid child here. */
-
+        .block-demo > .inline-demo:nth-child(3) {            
+            color: green;
+            float: right;
+        }
         .image-demo {
             /* Modify the .image-demo class to adjust the image's width to 50% of the screen. */
-            border: 2px solid blue;
+            border: 2px green dotted;
+            width: 50%;
         }
 
         .hover-demo:hover {
             /*Create a hover effect for .hover-demo that changes its color to blue and cursor to grabbing.*/
+            color: blue;
+            cursor: grabbing;
         }
     </style>
 </head>
